src/components/intro/intro.scss
.office-background {
  position: absolute;
  z-index: -1;
  bottom: 0;
  height: 100vh;
  right: 0;
  top: 0;
}

.yellow-line {
  height: 30px;
  width: 100%;
  position: absolute;
  background: #f8c43e;
  left: 0;
  bottom: 0;
  z-index: -2;
}

span.light { font-weight: 100; }

.introContainer {
  margin: 85px 0 0 2%;
  animation: pageEntry;
  animation-duration: 1.5s;
  }

  @keyframes pageEntry {
  0% { opacity: 0; }
  100% { opacity: 1; }
  }

.introBox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #f7d37c;

  .hello > h1,
  .hello > h2 {
    font-size: 2em;
    position: relative;
    z-index: 0;
    color: #f7d37c;
    text-align: left;
    margin: 0;
    line-height: 1.5em;
  }
}

.ctas {
  margin: 7% 0;
  width: 100%;

  .cta-intro {
    display: grid;
    grid-template-columns: 90px 2fr;
    grid-template-rows: 75px;
    grid-template:
      "pic headline";
    border-radius: 20px;
    background: #444;
    margin: 10px;

    h2 {
      grid-area: headline;
      margin-bottom: 0;
      align-self: center;
    }
  }

  .cta-intro:hover {
    box-shadow: 3px 1px 3px;
  }

  img {
    max-width: 60px;
    border-radius: 50%;
    border: 3px solid #f7d37c;
  }

  a,
  .intro-icon {
    grid-area: pic;
    align-self: center;
    justify-self: center;
  }

  p {
    display: none;
    grid-area: body;
    // border: 1px solid white;
    font-size: 1.2rem;
    line-height: 1.4rem;
    margin: 0 2px 0 0;
    align-self: start;
  }
}

@media screen and (min-width: 470px) {
  .ctas {
    .cta-intro {
      display: grid;
      grid-template-columns: 90px 2fr;
      grid-template-rows: 50px 50px;
      grid-template-areas:
        "pic headline"
        "pic body";
    }

    p {
      display: block;
    }
  }
}

@media screen and (min-width: 800px) {
  .introBox {
    height: 80vh;
    justify-content: space-around;
  }

  .cta-intro {
    max-width: 70%;
  }
}

